fix(main): textData entry & fix plansCard stretch

--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ a.navItem{
 }
 
 .plansCard{
-    border: 2px solid #ededed;
+    /* border: 2px solid #ededed; */
     padding: 2em;
 }
 
@@ -61,11 +61,9 @@ hr.smallHr{
 }
 
 .titlePlansCard{
-    border-top: 2px solid #ededed;
-    border-left: 2px solid #ededed;
-    border-right: 2px solid #ededed;
     text-align: center;
     padding: .5em;
+    border-bottom: 2px solid #ededed;
 }
 
 .plansCard h3{
@@ -118,7 +116,7 @@ a.jumboItem{
     margin: 1em 0 .3em 0;
     color: black;
     text-decoration: none;
-    transition: color .2s;
+    transition: color, transform .2s;
 }
 
 .squareAgency{
@@ -130,16 +128,6 @@ a.jumboItem{
     filter: invert(100%);
 }
 
-<<<<<<< HEAD
-#agency1{ background-image: url("/Web/img/designit.svg"); background-color: #5c2c64; border: 15px solid #2f1732; padding-top: calc(50% - 30px)}
-#agency2{ background-image: url("././img/arizona_state_university.svg"); background-color: #9ff6d4;}
-#agency3{ background-image: url('././img/university_of_florida.svg'); background-color: #ff6c31;}
-#agency4{ background-image: url("../../img/topps.svg"); background-color: #00e3e3;}
-#agency5{ background-image: url("../../img/world_bicycle_relief.svg"); background-color: #2bffb1;}
-#agency6{ background-image: url("../../img/hearst_corp.svg"); background-color: #4a2f19;}
-#agency7{ background-image: url("../../img/lonely_planet.svg"); background-color: #f3db7f;}
-#agency8{ background-image: url("../../img/clear_channel.svg"); background-color: #0126cf;}
-=======
 #agency1{ background-image: url("../img/designit.svg"); background-color: #5c2c64; border: 15px solid #2f1732; padding-top: calc(50% - 30px)}
 #agency2{ background-image: url("../img/arizona_state_university.svg"); background-color: #9ff6d4;}
 #agency3{ background-image: url("../img/university_of_florida.svg"); background-color: #ff6c31;}
@@ -148,7 +136,6 @@ a.jumboItem{
 #agency6{ background-image: url("../img/hearst_corp.svg"); background-color: #4a2f19;}
 #agency7{ background-image: url("../img/lonely_planet.svg"); background-color: #f3db7f;}
 #agency8{ background-image: url("../img/clear_channel.svg"); background-color: #0126cf;}
->>>>>>> parent of 6001777 (fix(main): fix path bgImg in agencyBox css)
 
 .visibleOnHover{
     margin-top: -7rem;
@@ -225,6 +212,8 @@ a:hover{
 
 a.jumboItem:hover{
     color: rgba(0, 0, 0, 0.5);
+    text-decoration: none;
+    transform: scale(1.2);
 }
 
 button:hover, a:hover{
@@ -318,6 +307,7 @@ button:hover, a:hover{
 
 /* ? BORDER--------------------------------------- */
 .bordSection{ border: black 2px dashed; }
+.grayBorder{ border: 2px solid #ededed; }
 
 /* ? BG COLORS------------------------------------ */
 .bgBlue {background-color: #0077be;}
